include/El/matrices.h

/* Diagonal
   ======== */
EL_EXPORT ElError ElDiagonal_i( ElMatrix_i A, ElMatrix_i d);
EL_EXPORT ElError ElDiagonal_s( ElMatrix_s A, ElMatrix_s d );
EL_EXPORT ElError ElDiagonal_d( ElMatrix_d A, ElMatrix_d d );
EL_EXPORT ElError ElDiagonal_c( ElMatrix_c A, ElMatrix_c d );
EL_EXPORT ElError ElDiagonal_z( ElMatrix_z A, ElMatrix_z d );
EL_EXPORT ElError ElDiagonalDist_i( ElDistMatrix_i A, ElDistMatrix_i d );
EL_EXPORT ElError ElDiagonalDist_s( ElDistMatrix_s A, ElDistMatrix_s d );
EL_EXPORT ElError ElDiagonalDist_d( ElDistMatrix_d A, ElDistMatrix_d d );
EL_EXPORT ElError ElDiagonalDist_c( ElDistMatrix_c A, ElDistMatrix_c d );
EL_EXPORT ElError ElDiagonalDist_z( ElDistMatrix_z A, ElDistMatrix_z d );
/* Egorov
   ====== */
EL_EXPORT ElError ElEgorov_c
( ElMatrix_c A, float (*phase)( ElInt, ElInt ), ElInt n );
EL_EXPORT ElError ElEgorov_z
( ElMatrix_z A, double (*phase)( ElInt, ElInt ), ElInt n );
EL_EXPORT ElError ElEgorovDist_c
( ElDistMatrix_c A, float (*phase)( ElInt, ElInt ), ElInt n );
EL_EXPORT ElError ElEgorovDist_z
( ElDistMatrix_z A, double (*phase)( ElInt, ElInt ), ElInt n );
/* Ehrenfest
   ========= */
EL_EXPORT ElError ElEhrenfest_s( ElMatrix_s P, ElInt n );
EL_EXPORT ElError ElEhrenfest_d( ElMatrix_d P, ElInt n );
EL_EXPORT ElError ElEhrenfest_c( ElMatrix_c P, ElInt n );
EL_EXPORT ElError ElEhrenfest_z( ElMatrix_z P, ElInt n );
EL_EXPORT ElError ElEhrenfestDist_s( ElDistMatrix_s P, ElInt n );
EL_EXPORT ElError ElEhrenfestDist_d( ElDistMatrix_d P, ElInt n );
EL_EXPORT ElError ElEhrenfestDist_c( ElDistMatrix_c P, ElInt n );
EL_EXPORT ElError ElEhrenfestDist_z( ElDistMatrix_z P, ElInt n );
EL_EXPORT ElError ElEhrenfestStationary_s( ElMatrix_s PInf, ElInt n );
EL_EXPORT ElError ElEhrenfestStationary_d( ElMatrix_d PInf, ElInt n );
EL_EXPORT ElError ElEhrenfestStationary_c( ElMatrix_c PInf, ElInt n );
EL_EXPORT ElError ElEhrenfestStationary_z( ElMatrix_z PInf, ElInt n );
EL_EXPORT ElError ElEhrenfestStationaryDist_s( ElDistMatrix_s PInf, ElInt n );
EL_EXPORT ElError ElEhrenfestStationaryDist_d( ElDistMatrix_d PInf, ElInt n );
EL_EXPORT ElError ElEhrenfestStationaryDist_c( ElDistMatrix_c PInf, ElInt n );
EL_EXPORT ElError ElEhrenfestStationaryDist_z( ElDistMatrix_z PInf, ElInt n );
EL_EXPORT ElError ElEhrenfestDecay_s( ElMatrix_s A, ElInt n );
EL_EXPORT ElError ElEhrenfestDecay_d( ElMatrix_d A, ElInt n );
EL_EXPORT ElError ElEhrenfestDecay_c( ElMatrix_c A, ElInt n );
EL_EXPORT ElError ElEhrenfestDecay_z( ElMatrix_z A, ElInt n );
EL_EXPORT ElError ElEhrenfestDecayDist_s( ElDistMatrix_s A, ElInt n );
EL_EXPORT ElError ElEhrenfestDecayDist_d( ElDistMatrix_d A, ElInt n );
EL_EXPORT ElError ElEhrenfestDecayDist_c( ElDistMatrix_c A, ElInt n );
EL_EXPORT ElError ElEhrenfestDecayDist_z( ElDistMatrix_z A, ElInt n );
/* ExtendedKahan
   ============= */
EL_EXPORT ElError ElExtendedKahan_s
( ElMatrix_s A, ElInt k, float phi, float mu );
EL_EXPORT ElError ElExtendedKahan_d
( ElMatrix_d A, ElInt k, double phi, double mu );
EL_EXPORT ElError ElExtendedKahan_c
( ElMatrix_c A, ElInt k, float phi, float mu );
EL_EXPORT ElError ElExtendedKahan_z
( ElMatrix_z A, ElInt k, double phi, double mu );
EL_EXPORT ElError ElExtendedKahanDist_s
( ElDistMatrix_s A, ElInt k, float phi, float mu );
EL_EXPORT ElError ElExtendedKahanDist_d
( ElDistMatrix_d A, ElInt k, double phi, double mu );
EL_EXPORT ElError ElExtendedKahanDist_c
( ElDistMatrix_c A, ElInt k, float phi, float mu );
EL_EXPORT ElError ElExtendedKahanDist_z
( ElDistMatrix_z A, ElInt k, double phi, double mu );
/* Fiedler
   ======= */
EL_EXPORT ElError ElFiedler_s
( ElMatrix_s A, ElInt cSize, float* cBuf );
EL_EXPORT ElError ElFiedler_d
( ElMatrix_d A, ElInt cSize, double* cBuf );
EL_EXPORT ElError ElFiedler_c
( ElMatrix_c A, ElInt cSize, complex_float* cBuf );
EL_EXPORT ElError ElFiedler_z
( ElMatrix_z A, ElInt cSize, complex_double* cBuf );
EL_EXPORT ElError ElFiedlerDist_s
( ElDistMatrix_s A, ElInt cSize, float* cBuf );
EL_EXPORT ElError ElFiedlerDist_d
( ElDistMatrix_d A, ElInt cSize, double* cBuf );
EL_EXPORT ElError ElFiedlerDist_c
( ElDistMatrix_c A, ElInt cSize, complex_float* cBuf );
EL_EXPORT ElError ElFiedlerDist_z
( ElDistMatrix_z A, ElInt cSize, complex_double* cBuf );