include/El/matrices.py


# Diagonal
# --------
lib.ElDiagonal_i.argtypes = [c_void_p,iType,POINTER(iType)]
lib.ElDiagonal_i.restype = c_uint
lib.ElDiagonal_s.argtypes = [c_void_p,iType,POINTER(sType)]
lib.ElDiagonal_s.restype = c_uint
lib.ElDiagonal_d.argtypes = [c_void_p,iType,POINTER(dType)]
lib.ElDiagonal_d.restype = c_uint
lib.ElDiagonal_c.argtypes = [c_void_p,iType,POINTER(cType)]
lib.ElDiagonal_c.restype = c_uint
lib.ElDiagonal_z.argtypes = [c_void_p,iType,POINTER(zType)]
lib.ElDiagonal_z.restype = c_uint
lib.ElDiagonalDist_i.argtypes = [c_void_p,iType,POINTER(iType)]
lib.ElDiagonalDist_i.restype = c_uint
lib.ElDiagonalDist_s.argtypes = [c_void_p,iType,POINTER(sType)]
lib.ElDiagonalDist_s.restype = c_uint
lib.ElDiagonalDist_d.argtypes = [c_void_p,iType,POINTER(dType)]
lib.ElDiagonalDist_d.restype = c_uint
lib.ElDiagonalDist_c.argtypes = [c_void_p,iType,POINTER(cType)]
lib.ElDiagonalDist_c.restype = c_uint
lib.ElDiagonalDist_z.argtypes = [c_void_p,iType,POINTER(zType)]
lib.ElDiagonalDist_z.restype = c_uint
def Diagonal(A,d):
  dLen = len(d)
  if type(A) is Matrix:
    if   A.tag == iTag: 
      dBuf = (iType*dLen)(*d)
      lib.ElDiagonal_i(A.obj,dLen,dBuf)
    elif A.tag == sTag:
      dBuf = (sType*dLen)(*d)
      lib.ElDiagonal_s(A.obj,dLen,dBuf)
    elif A.tag == dTag:
      dBuf = (dType*dLen)(*d)
      lib.ElDiagonal_d(A.obj,dLen,dBuf)
    elif A.tag == cTag:
      dBuf = (cType*dLen)(*d)
      lib.ElDiagonal_c(A.obj,dLen,dBuf)
    elif A.tag == zTag:
      dBuf = (zType*zLen)(*d)
      lib.ElDiagonal_z(A.obj,dLen,dBuf)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == iTag: 
      dBuf = (iType*dLen)(*d)
      lib.ElDiagonalDist_i(A.obj,dLen,dBuf)
    elif A.tag == sTag:
      dBuf = (sType*dLen)(*d)
      lib.ElDiagonalDist_s(A.obj,dLen,dBuf)
    elif A.tag == dTag:
      dBuf = (dType*dLen)(*d)
      lib.ElDiagonalDist_d(A.obj,dLen,dBuf)
    elif A.tag == cTag:
      dBuf = (cType*dLen)(*d)
      lib.ElDiagonalDist_c(A.obj,dLen,dBuf)
    elif A.tag == zTag:
      dBuf = (zType*zLen)(*d)
      lib.ElDiagonalDist_z(A.obj,dLen,dBuf)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Egorov
# ------
lib.ElEgorov_c.argtypes = [c_void_p,CFUNCTYPE(sType,iType,iType),iType]
lib.ElEgorov_c.restype = c_uint
lib.ElEgorov_z.argtypes = [c_void_p,CFUNCTYPE(dType,iType,iType),iType]
lib.ElEgorov_z.restype = c_uint
lib.ElEgorovDist_c.argtypes = [c_void_p,CFUNCTYPE(sType,iType,iType),iType]
lib.ElEgorovDist_c.restype = c_uint
lib.ElEgorovDist_z.argtypes = [c_void_p,CFUNCTYPE(dType,iType,iType),iType]
lib.ElEgorovDist_z.restype = c_uint
def Egorov(A,phase,n):
  if type(A) is Matrix:
    if   A.tag == cTag:
      cPhase = CFUNCTYPE(sType,iType,iType)(phase)
      lib.ElEgorov_c(A.obj,cPhase,n)
    elif A.tag == zTag:
      cPhase = CFUNCTYPE(dType,iType,iType)(phase)
      lib.ElEgorov_z(A.obj,cPhase,n)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == cTag:
      cPhase = CFUNCTYPE(sType,iType,iType)(phase)
      lib.ElEgorovDist_c(A.obj,cPhase,n)
    elif A.tag == zTag:
      cPhase = CFUNCTYPE(dType,iType,iType)(phase)
      lib.ElEgorovDist_z(A.obj,cPhase,n)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Ehrenfest
# ---------
lib.ElEhrenfest_s.argtypes = [c_void_p,iType]
lib.ElEhrenfest_s.restype = c_uint
lib.ElEhrenfest_d.argtypes = [c_void_p,iType]
lib.ElEhrenfest_d.restype = c_uint
lib.ElEhrenfest_c.argtypes = [c_void_p,iType]
lib.ElEhrenfest_c.restype = c_uint
lib.ElEhrenfest_z.argtypes = [c_void_p,iType]
lib.ElEhrenfest_z.restype = c_uint
lib.ElEhrenfestDist_s.argtypes = [c_void_p,iType]
lib.ElEhrenfestDist_s.restype = c_uint
lib.ElEhrenfestDist_d.argtypes = [c_void_p,iType]
lib.ElEhrenfestDist_d.restype = c_uint
lib.ElEhrenfestDist_c.argtypes = [c_void_p,iType]
lib.ElEhrenfestDist_c.restype = c_uint
lib.ElEhrenfestDist_z.argtypes = [c_void_p,iType]
lib.ElEhrenfestDist_z.restype = c_uint
def Ehrenfest(P,n):
  if type(P) is Matrix:
    if   P.tag == sTag: lib.ElEhrenfest_s(P.obj,n)
    elif P.tag == dTag: lib.ElEhrenfest_d(P.obj,n)
    elif P.tag == cTag: lib.ElEhrenfest_c(P.obj,n)
    elif P.tag == zTag: lib.ElEhrenfest_z(P.obj,n)
    else: raise Exception('Unsupported datatype')
  elif type(P) is DistMatrix:
    if   P.tag == sTag: lib.ElEhrenfestDist_s(P.obj,n)
    elif P.tag == dTag: lib.ElEhrenfestDist_d(P.obj,n)
    elif P.tag == cTag: lib.ElEhrenfestDist_c(P.obj,n)
    elif P.tag == zTag: lib.ElEhrenfestDist_z(P.obj,n)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

lib.ElEhrenfestStationary_s.argtypes = [c_void_p,iType]
lib.ElEhrenfestStationary_s.restype = c_uint
lib.ElEhrenfestStationary_d.argtypes = [c_void_p,iType]
lib.ElEhrenfestStationary_d.restype = c_uint
lib.ElEhrenfestStationary_c.argtypes = [c_void_p,iType]
lib.ElEhrenfestStationary_c.restype = c_uint
lib.ElEhrenfestStationary_z.argtypes = [c_void_p,iType]
lib.ElEhrenfestStationary_z.restype = c_uint
lib.ElEhrenfestStationaryDist_s.argtypes = [c_void_p,iType]
lib.ElEhrenfestStationaryDist_s.restype = c_uint
lib.ElEhrenfestStationaryDist_d.argtypes = [c_void_p,iType]
lib.ElEhrenfestStationaryDist_d.restype = c_uint
lib.ElEhrenfestStationaryDist_c.argtypes = [c_void_p,iType]
lib.ElEhrenfestStationaryDist_c.restype = c_uint
lib.ElEhrenfestStationaryDist_z.argtypes = [c_void_p,iType]
lib.ElEhrenfestStationaryDist_z.restype = c_uint
def EhrenfestStationary(PInf,n):
  if type(PInf) is Matrix:
    if   PInf.tag == sTag: lib.ElEhrenfestStationary_s(PInf.obj,n)
    elif PInf.tag == dTag: lib.ElEhrenfestStationary_d(PInf.obj,n)
    elif PInf.tag == cTag: lib.ElEhrenfestStationary_c(PInf.obj,n)
    elif PInf.tag == zTag: lib.ElEhrenfestStationary_z(PInf.obj,n)
    else: raise Exception('Unsupported datatype')
  elif type(PInf) is DistMatrix:
    if   PInf.tag == sTag: lib.ElEhrenfestStationaryDist_s(PInf.obj,n)
    elif PInf.tag == dTag: lib.ElEhrenfestStationaryDist_d(PInf.obj,n)
    elif PInf.tag == cTag: lib.ElEhrenfestStationaryDist_c(PInf.obj,n)
    elif PInf.tag == zTag: lib.ElEhrenfestStationaryDist_z(PInf.obj,n)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

lib.ElEhrenfestDecay_s.argtypes = [c_void_p,iType]
lib.ElEhrenfestDecay_s.restype = c_uint
lib.ElEhrenfestDecay_d.argtypes = [c_void_p,iType]
lib.ElEhrenfestDecay_d.restype = c_uint
lib.ElEhrenfestDecay_c.argtypes = [c_void_p,iType]
lib.ElEhrenfestDecay_c.restype = c_uint
lib.ElEhrenfestDecay_z.argtypes = [c_void_p,iType]
lib.ElEhrenfestDecay_z.restype = c_uint
lib.ElEhrenfestDecayDist_s.argtypes = [c_void_p,iType]
lib.ElEhrenfestDecayDist_s.restype = c_uint
lib.ElEhrenfestDecayDist_d.argtypes = [c_void_p,iType]
lib.ElEhrenfestDecayDist_d.restype = c_uint
lib.ElEhrenfestDecayDist_c.argtypes = [c_void_p,iType]
lib.ElEhrenfestDecayDist_c.restype = c_uint
lib.ElEhrenfestDecayDist_z.argtypes = [c_void_p,iType]
lib.ElEhrenfestDecayDist_z.restype = c_uint
def EhrenfestDecay(PInf,n):
  if type(PInf) is Matrix:
    if   PInf.tag == sTag: lib.ElEhrenfestDecay_s(PInf.obj,n)
    elif PInf.tag == dTag: lib.ElEhrenfestDecay_d(PInf.obj,n)
    elif PInf.tag == cTag: lib.ElEhrenfestDecay_c(PInf.obj,n)
    elif PInf.tag == zTag: lib.ElEhrenfestDecay_z(PInf.obj,n)
    else: raise Exception('Unsupported datatype')
  elif type(PInf) is DistMatrix:
    if   PInf.tag == sTag: lib.ElEhrenfestDecayDist_s(PInf.obj,n)
    elif PInf.tag == dTag: lib.ElEhrenfestDecayDist_d(PInf.obj,n)
    elif PInf.tag == cTag: lib.ElEhrenfestDecayDist_c(PInf.obj,n)
    elif PInf.tag == zTag: lib.ElEhrenfestDecayDist_z(PInf.obj,n)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Extended Kahan
# --------------
lib.ElExtendedKahan_s.argtypes = [c_void_p,iType,sType,sType]
lib.ElExtendedKahan_s.restype = c_uint
lib.ElExtendedKahan_d.argtypes = [c_void_p,iType,dType,dType]
lib.ElExtendedKahan_d.restype = c_uint
lib.ElExtendedKahan_c.argtypes = [c_void_p,iType,sType,sType]
lib.ElExtendedKahan_c.restype = c_uint
lib.ElExtendedKahan_z.argtypes = [c_void_p,iType,dType,dType]
lib.ElExtendedKahan_z.restype = c_uint
lib.ElExtendedKahanDist_s.argtypes = [c_void_p,iType,sType,sType]
lib.ElExtendedKahanDist_s.restype = c_uint
lib.ElExtendedKahanDist_d.argtypes = [c_void_p,iType,dType,dType]
lib.ElExtendedKahanDist_d.restype = c_uint
lib.ElExtendedKahanDist_c.argtypes = [c_void_p,iType,sType,sType]
lib.ElExtendedKahanDist_c.restype = c_uint
lib.ElExtendedKahanDist_z.argtypes = [c_void_p,iType,dType,dType]
lib.ElExtendedKahanDist_z.restype = c_uint
def ExtendedKahan(A,k,phi,mu):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElExtendedKahan_s(A.obj,k,phi,mu)
    elif A.tag == dTag: lib.ElExtendedKahan_d(A.obj,k,phi,mu)
    elif A.tag == cTag: lib.ElExtendedKahan_c(A.obj,k,phi,mu)
    elif A.tag == zTag: lib.ElExtendedKahan_z(A.obj,k,phi,mu)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElExtendedKahanDist_s(A.obj,k,phi,mu)
    elif A.tag == dTag: lib.ElExtendedKahanDist_d(A.obj,k,phi,mu)
    elif A.tag == cTag: lib.ElExtendedKahanDist_c(A.obj,k,phi,mu)
    elif A.tag == zTag: lib.ElExtendedKahanDist_z(A.obj,k,phi,mu)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Fiedler
# -------
lib.ElFiedler_s.argtypes = [c_void_p,iType,POINTER(sType)]
lib.ElFiedler_s.restype = c_uint
lib.ElFiedler_d.argtypes = [c_void_p,iType,POINTER(dType)]
lib.ElFiedler_d.restype = c_uint
lib.ElFiedler_c.argtypes = [c_void_p,iType,POINTER(cType)]
lib.ElFiedler_c.restype = c_uint
lib.ElFiedler_z.argtypes = [c_void_p,iType,POINTER(zType)]
lib.ElFiedler_z.restype = c_uint
lib.ElFiedlerDist_s.argtypes = [c_void_p,iType,POINTER(sType)]
lib.ElFiedlerDist_s.restype = c_uint
lib.ElFiedlerDist_d.argtypes = [c_void_p,iType,POINTER(dType)]
lib.ElFiedlerDist_d.restype = c_uint
lib.ElFiedlerDist_c.argtypes = [c_void_p,iType,POINTER(cType)]
lib.ElFiedlerDist_c.restype = c_uint
lib.ElFiedlerDist_z.argtypes = [c_void_p,iType,POINTER(zType)]
lib.ElFiedlerDist_z.restype = c_uint
def Fiedler(A,c):
  cLen = len(c)
  if type(A) is Matrix:
    if   A.tag == sTag: 
      cBuf = (sType*cLen)(*c)
      lib.ElFiedler_s(A.obj,cLen,cBuf)
    elif A.tag == dTag:
      cBuf = (dType*cLen)(*c)
      lib.ElFiedler_d(A.obj,cLen,cBuf)
    elif A.tag == cTag:
      cBuf = (cType*cLen)(*c)
      lib.ElFiedler_c(A.obj,cLen,cBuf)
    elif A.tag == zTag:
      cBuf = (zType*cLen)(*c)
      lib.ElFiedler_z(A.obj,cLen,cBuf)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: 
      cBuf = (sType*cLen)(*c)
      lib.ElFiedlerDist_s(A.obj,cLen,cBuf)
    elif A.tag == dTag:
      cBuf = (dType*cLen)(*c)
      lib.ElFiedlerDist_d(A.obj,cLen,cBuf)
    elif A.tag == cTag:
      cBuf = (cType*cLen)(*c)
      lib.ElFiedlerDist_c(A.obj,cLen,cBuf)
    elif A.tag == zTag:
      cBuf = (zType*cLen)(*c)
      lib.ElFiedlerDist_z(A.obj,cLen,cBuf)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')
